Dev; setup identity server for authorization and authentication.
